fix contrast on slideshow widget colors to meet WCAG AAA standard

--- a/app/assets/stylesheets/application_blackprint.scss
+++ b/app/assets/stylesheets/application_blackprint.scss
@@ -183,3 +183,11 @@ a {
   margin-right: 2.5rem;
   text-align: right;
 }
+
+.list-group-item.active, 
+.list-group-item.active:hover {
+  z-index: 2;
+  color: #fff;
+  background-color: #004466;
+  border-color: #004466;
+}
